--- a/Diplom/Train.html
+++ b/Diplom/Train.html
@@ -15,7 +15,8 @@
             <span id="logo">TheRightPath</span>
             <a href="index.html">Пошук маршруту</a>/
             <a href="Station.html">Пошук по станції</a>/
-            <a href="#">БД потягів</a>/
+            <a href="#">Сторінка пошуку по філії</a>/
+            <a href="support.html">Контакти</a>
         </div>
 
         <h1>Сервіс пошуку потягів та маршрутів «TheRightPath»</h1>
@@ -42,11 +43,28 @@
                             </td>
                             <td>
                                 <div class="form_div">
-                                    <input class="view" id="v1" type="checkbox" name="v" value="1" checked title="Швидкісний">
-                                    <input class="view" id="v2" type="checkbox" name="v" value="2" checked title="Фірмовий">
-                                    <input class="view" id="v3" type="checkbox" name="v" value="3" checked title="Швидкий">
-                                    <input class="view" id="v4" type="checkbox" name="v" value="4" checked title="Пасажирський">
-                                    <input class="view" id="v5" type="checkbox" name="v" value="5" checked title="Електричка">
+                                    <div class="signature">
+                                   <div class="c">
+                                       <input class="view" id="v1" type="checkbox" name="v" value="1" checked title="Швидкісний">
+                                       <p>Швидкісний &nbsp;</p>
+                                    </div>
+                                    <div class="c">
+                                       <input class="view" id="v2" type="checkbox" name="v" value="2" checked title="Фірмовий">
+                                       <p>Фірмовий &nbsp;</p>
+                                    </div>
+                                    <div class="c">
+                                       <input class="view" id="v3" type="checkbox" name="v" value="3" checked title="Швидкий">
+                                       <p>Швидкий &nbsp;</p>
+                                    </div>
+                                    <div class="c">
+                                       <input class="view" id="v4" type="checkbox" name="v" value="4" checked title="Пасажирський">
+                                       <p>Пасажирський &nbsp;</p>
+                                    </div>
+                                    <div class="c">
+                                       <input class="view" id="v5" type="checkbox" name="v" value="5" checked title="Електричка">
+                                       <p>Електричка</p>
+                                    </div>
+                                    </div>
                                 </div>
                             </td>
                             <td>
@@ -64,8 +82,8 @@
         </div>
     </div>
     <div id="footer">
-        Copyright &copy; 2017/
-        <p>Керівник: Гапоненко Н. В., Розробник: Нікуліцов Є. Е.</p>
+        Copyright &copy; 2018/
+        <p>Керівник: Бабенко І.Б., Розробник: Нікуліцов Є. Е.</p>
         <a id="Admin" href="Admin.html"></a>
     </div>
 
